c - crash     b - bug fix    e - enhancement    f - new feature  n - note

2.5.13
  e - Added RPM support for nvidia_gpus to torque.spec.in file. Submitted by  Lloyd Brown
        Fulton supercomputing Lab, BYU.

2.5.12
  b - Fix so child pbs_mom does not remain running after qdel on slow starting job.
      TRQ-860. (backported from 4.0.1)
  b - Fix so pbs_mom won't segfault after a qdel is done for a job that is still
      running the prologue. TRQ-832. (backported from 4.0.1)
  b - Added code from 3.0-fixes which fixes a problem with procct getting up to Moab.
      3.0-fixes revision 5941
  b - Fix so qrun jobid[] does not cause pbs_server segfault. TRQ-865. (backported from 4.0.2)
  b - Fix to validate qsub -l nodes=x against resources_max.nodes the same as v2.4.
      TRQ-897. (backported from 4.0.2)
  e - Allow pbs_mom to change users group on stderr/stdout files. Enabled by configuring
      Torque with CFLAGS='-DRESETGROUP'. TRQ-908. (backported from 4.0.2)
  b - Fix so gpu count gets written out to server nodes file when using
      --enable-nvidia-gpus. TRQ-927. (backported from 4.0.2)
  b - fixed a memory leak on the MOM when running with --enable-nvidia-gpus. TRQ-904
  b - fix server crash caused by gpu mode not being right after gpus=x:. TRQ-948.
      (backported from 4.0.3)
  e - add the mom config option exec_with_exec. When set to true, the pbs_mom will exec 
      the job script instead of piping it to stdin. This makes signal trapping easier 
      because the shell doesn't have to be configured to trap the signal as well.

2.5.11
  b - fix for writing too much data when job_script is saved to job log. (backported from 3.0.5)
  b - fix for where pbs_mom would not automatically set gpu mode. (backported from 3.0.5)
  b - fix for alligning qstat -r output when configured with -DTXT. (backported from 3.0.5)
  e - Change size of transfer block used on job rerun from 4k to 64k. (backported from 3.0.5)